# tippiti-python

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: regenerate.yml
scripts/: generate.sh  openapi-client.yaml
tippiti/: __init__.py
