[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tippiti"
version = "1.0.2"
description = "Official Python client for the Tippiti API – the transcription and dictation platform for physicians, attorneys, forensic examiners and professional typing services."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Tippiti", email = "support@tippiti.io" },
]
keywords = [
    "tippiti",
    "transcription",
    "dictation",
    "medical-transcription",
    "legal-transcription",
    "openapi",
    "api-client",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<0.29",
    "attrs>=24.1",
    "python-dateutil>=2.9",
]

[project.urls]
Homepage = "https://tippiti.io"
Documentation = "https://apidocs.tippiti.io"
Repository = "https://github.com/tippiti/tippiti-python"
Issues = "https://github.com/tippiti/tippiti-python/issues"
Changelog = "https://github.com/tippiti/tippiti-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "openapi-python-client>=0.21",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["tippiti"]

[tool.hatch.build.targets.sdist]
include = ["tippiti/", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["tippiti/generated"]
